add_subdirectory(log/test)
add_subdirectory(crypto/test)
add_subdirectory(net/test)
add_subdirectory(time/test)
add_subdirectory(process/test)
add_subdirectory(runtime/test)
add_subdirectory(thread/test)
add_subdirectory(util/test)

aux_source_directory(./log log_SRCS)
aux_source_directory(./net net_SRCS)
aux_source_directory(./crypto crypto_SRCS)
aux_source_directory(./process process_SRCS)
aux_source_directory(./runtime runtime_SRCS)
aux_source_directory(./thread thread_SRCS)
aux_source_directory(./time time_SRCS)
aux_source_directory(./util util_SRCS)
add_library(baize ${log_SRCS} ${net_SRCS} ${crypto_SRCS} ${process_SRCS} ${runtime_SRCS} ${thread_SRCS} ${time_SRCS} ${util_SRCS})