add_executable(Timestamp_test Timestamp_test.cc)
target_link_libraries(Timestamp_test baize_log baize_runtime baize_thread pthread boost_context baize_time)

add_executable(Timer_test Timer_test.cc)
target_link_libraries(Timer_test baize_runtime baize_log baize_time boost_context baize_thread pthread)